examples/test/testpolicy14144.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14144
  namespace: namespace405
spec:
  podSelector:
    matchLabels:
      key49: value39
      key25: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value48
          key40: value43
          key29: value40
      podSelector:
        matchLabels:
          key14: value27
          key4: value33
